--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Arima&family=IBM+Plex+Mono&family=Montserrat:wght@100;400&family=Staatliches&display=swap');
+
+body {
+  padding: 0;
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.container {
+  background: rgb(132,124,255);
+  background: linear-gradient(90deg, rgba(132,124,255,1) 25%, rgba(0,225,250,1) 40%, rgba(0,212,255,1) 100%);
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 2rem;
+
+}
+
+.title {
   color: white;
+  text-decoration: underline;
 }
 
-.App-link {
-  color: #61dafb;
+.city {
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+  margin: 1rem;
+  padding: 2rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.search {
+  margin-top: 2rem;
 }
+
+
+
